<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCountdown">

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="26sp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/label_event_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="26sp"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/label_event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_countdown_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClickSubmit"
        android:text="@string/create_countdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_event_name"
        app:layout_constraintBottom_toBottomOf="@+id/editTextName"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextName" />



</androidx.constraintlayout.widget.ConstraintLayout>